# flowcus

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  flowcus.settings  flowcus.toml
.claude/: settings.local.json
.claude/commands/: learn.md  review-knowledge.md
.claude/knowledge/architecture/: granule-index-system.md  ipfix-subsystem.md  merge-system.md  query-language.md  storage-engine.md  threading-model.md  workspace-layout.md
.claude/knowledge/decisions/: codec-pipeline.md  frontend-embedding.md  ipfix-clippy-allows.md  scan-limiting-principle.md
.claude/knowledge/issues/: dispatch-loop-ownership.md
.claude/knowledge/patterns/: ipfix-test-messages.md  testing-pattern.md
.claude/skills/: add-component.md  build.md  ci.md  test.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
ci/: local.sh
crates/flowcus-app/: Cargo.toml
crates/flowcus-app/src/: main.rs
crates/flowcus-app/tests/: server_test.rs
crates/flowcus-core/: Cargo.toml
crates/flowcus-core/src/: config.rs  error.rs  lib.rs  observability.rs  profiling.rs  settings.rs  telemetry.rs
crates/flowcus-ipfix/: Cargo.toml
crates/flowcus-ipfix/src/: decoder.rs  display.rs  lib.rs  listener.rs  netflow.rs  protocol.rs  session.rs
crates/flowcus-ipfix/src/ie/: iana.rs  mod.rs  vendor.rs
crates/flowcus-ipfix/tests/: rfc_compliance_tests.rs
crates/flowcus-query/: Cargo.toml
crates/flowcus-query/src/: ast.rs  lib.rs  parser.rs  structured.rs
crates/flowcus-server/: Cargo.toml
crates/flowcus-server/src/: api.rs  assets.rs  lib.rs  query.rs  settings.rs  state.rs
crates/flowcus-storage/: Cargo.toml
crates/flowcus-storage/src/: cache.rs  column.rs  crc.rs  decode.rs  executor.rs  granule.rs  ingest.rs  lib.rs  merge.rs  metrics.rs  migrate.rs  part.rs  part_locks.rs  pending.rs  retention.rs  schema.rs  table.rs  uuid7.rs  writer.rs
crates/flowcus-storage/src/codec/: delta.rs  fixed.rs  gcd.rs  mod.rs  varlen.rs
crates/flowcus-storage/tests/: integrity_tests.rs
crates/flowcus-worker/: Cargo.toml
crates/flowcus-worker/benches/: worker_pool.rs
crates/flowcus-worker/src/: lib.rs  pool.rs  task.rs
crates/flowcus-worker/tests/: worker_integration.rs
docs/: QUERY_LANGUAGE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: AboutDialog.tsx  App.tsx  ColumnConfig.tsx  ExplainGantt.tsx  ExportModal.tsx  FlowSidebar.tsx  HealthPanel.tsx  QueryEditor.tsx  ResultsTable.tsx  SearchBar.tsx  SettingsPanel.tsx  StatsBar.tsx  ThemeSwitcher.tsx  TimeHistogram.tsx  TimeRangePicker.tsx  api.ts  formatters.ts  index.css  main.tsx  tokenizer.ts  useCompletions.ts
tests/e2e/: histogram_validator.py
