[workspace]
resolver = "2"
members = [
    "crates/flowcus-core",

    "crates/flowcus-ipfix",
    "crates/flowcus-storage",
    "crates/flowcus-server",
    "crates/flowcus-app",
    "crates/flowcus-query",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["consi"]
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Embedding frontend assets
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
assert_cmd = "2"
predicates = "3"

# Stream traits (for SSE)
futures-core = "0.3"

# Compression
lz4_flex = "0.11"

# Parallelism
rayon = "1.10"

# Networking
socket2 = "0.5"

# Internal crates
flowcus-core = { path = "crates/flowcus-core" }

flowcus-ipfix = { path = "crates/flowcus-ipfix" }
flowcus-storage = { path = "crates/flowcus-storage" }
flowcus-server = { path = "crates/flowcus-server" }
flowcus-query = { path = "crates/flowcus-query" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
strip = false
