[package]
name = "flowcus-app"
description = "Flowcus application binary"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "flowcus"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
flowcus-core = { workspace = true }
flowcus-worker = { workspace = true }
flowcus-ipfix = { workspace = true }
flowcus-storage = { workspace = true }
flowcus-server = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
