[package]
name = "flowcus-ipfix"
description = "IPFIX (RFC 7011) collector: protocol parsing, template management, and network listener"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
flowcus-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
