[package]
name = "flowcus-server"
description = "Web server with embedded frontend and API routes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
flowcus-core = { workspace = true }
flowcus-ipfix = { workspace = true }
flowcus-query = { workspace = true }
flowcus-worker = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true }
