[package]
name = "flowcus-worker"
description = "Worker pool abstractions for async and CPU-bound tasks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
flowcus-core = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "worker_pool"
harness = false
